--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,23 @@
     <string name="checkInternet">Couldn\'t reach server, check your internet connection.</string>
     <string name="unknownError">Unknown error</string>
     <string name="swipe_to_refresh">Swipe to refresh</string>
+    <string name="settings">Settings</string>
+    <string name="subscription">Subscription</string>
+    <string name="manage_subscription">Manage subscription</string>
+    <string name="preferences">Preferences</string>
+    <string name="reminders">Reminders</string>
+    <string name="language">Language</string>
+    <string name="theme">Theme</string>
+    <string name="support_us">Support us</string>
+    <string name="rate_us">Rate us</string>
+    <string name="contact">Contact</string>
+    <string name="donate_for_creators">Donate for creators</string>
+    <string name="become_a_supporter">Become a supporter. Support how you see fit</string>
+    <string name="coffee">Coffee</string>
+    <string name="prise">Prise</string>
+    <string name="other">Other</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
+    <string name="title_notification_reminder">Daily advice</string>
+    <string name="reminders_notification_channel_name">Notification Service</string>
 </resources>
