--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,10 +22,29 @@
     <string name="donate_for_creators">Donate for creators</string>
     <string name="become_a_supporter">Become a supporter. Support how you see fit</string>
     <string name="coffee">Coffee</string>
-    <string name="prise">Prise</string>
     <string name="other">Other</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
     <string name="title_notification_reminder">Daily advice</string>
     <string name="reminders_notification_channel_name">Notification Service</string>
+    <string name="select_theme">Select Theme</string>
+    <string-array name="themes">
+        <item>Light</item>
+        <item>Dark</item>
+        <item>System</item>
+    </string-array>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="select_language">Select Language</string>
+    <string-array name="language">
+        <item>English</item>
+        <item>Ukrainian</item>
+        <item>Russian</item>
+        <item>German</item>
+        <item>French</item>
+        <item>Spanish</item>
+    </string-array>
+    <string name="application_not_found">Application not found</string>
+    <string name="send_email">Send email</string>
+    <string name="select_time">Select time</string>
 </resources>
