--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,8 +39,8 @@
     <string name="select_language">Sélectionnez une langue</string>
     <string-array name="language">
         <item>Anglais</item>
-        <item>ukrainien</item>
-        <item>ukrainien</item>
+        <item>Ukrainien</item>
+        <item>Russe</item>
         <item>Allemand</item>
         <item>Français</item>
         <item>Espagnol</item>
